<resources>
    <string name="app_name">FoodRunner</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="forgot_password"> <u>Forgot Password?</u></string>
    <string name="sign_up_now"> <u> Don\'t have an account? Sign up now </u> </string>
    <string name="menu_Home">Home</string>
    <string name="menu_MyProfile">My Profile</string>
    <string name="menu_FavRestaurants">Favorite Restaurants</string>
    <string name="menu_OrderHistory">Order History</string>
    <string name="menu_FAQs">FAQs</string>
    <string name="menu_Logout">Log out</string>
    <string name="open_drawer"> Open Drawer</string>
    <string name="close_drawer"> Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="proceed_to_cart">Proceed To Cart</string>
    <string name="place_order">Place Order</string>


</resources>